fixed CreateBook method
